--- a/project/asset/css/login/Verification2.css
+++ b/project/asset/css/login/Verification2.css
@@ -1,27 +1,56 @@
-.inner_height {
+.loginPw__popup .inner_height {
     max-height: 542px;
+}
+.loginPw__popup {
+    width: 380px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #fff;
+    border-radius: 15px;
+    border: 1px solid #6CC4B3;
+    color: #505050;
 }
 
 /* 아이디 찾기 */
 .emailVerifi {
     width: 100%;
 }
-.contentBox {
+.passVer_field .contentBox {
     border-bottom: 1px dashed #6CC4B3;
     padding-bottom: 19px;
     margin-bottom: 20px;
 }
-.contentBox p:last-child {
+.passVer_field .contentBox p:last-child {
     font-size: 14px;
     color: #757575;
     text-align: center;
 }
-.contentBox h5 {
+.passVer_field .contentBox h5 {
     font-size: 16px;
     text-align: center;
     margin-bottom: 10px;
     color: #757575;
 }
+
+.emailVerifi .contentBox {
+    border-bottom: 1px dashed #6CC4B3;
+    padding-bottom: 19px;
+    margin-bottom: 20px;
+}
+.emailVerifi .contentBox p:last-child {
+    font-size: 14px;
+    color: #757575;
+    text-align: center;
+}
+.emailVerifi .contentBox h5 {
+    font-size: 16px;
+    text-align: center;
+    margin-bottom: 10px;
+    color: #757575;
+}
+
 .input__style {
     display: block;
     padding: 11px 20px;
@@ -48,7 +77,7 @@ input:required {
     margin-bottom: 30px;
 }
 .second_input2 > .input__style {
-    margin-bottom: 57px;
+    margin-bottom: 58px;
 }
 .searchIdBox {
     width: 100%;
@@ -62,7 +91,16 @@ input:required {
 .searchIdBox > div {
     text-align: center;
 }
-.confirm__btn {
+.passVer_field .confirm__btn {
+    display: block;
+    margin: 0 auto;
+    font-size: 20px;
+    cursor: pointer;
+    color: #505050;
+    background-color: #fff;
+}
+
+.emailVerifi .confirm__btn {
     display: block;
     margin: 0 auto;
     font-size: 20px;
@@ -73,8 +111,8 @@ input:required {
 
 /* 비밀번호 찾기 */
 .passVer_user {
-    margin-bottom: 30px;
+    margin-bottom: 32px;
 }
 .passVer_user2 {
-    margin-bottom: 56px;
+    margin-bottom: 59px;
 }
