--- a/project/asset/css/login/findID.css
+++ b/project/asset/css/login/findID.css
@@ -1,4 +1,4 @@
-#header {
+/* #header {
     width: 100%;
     height: 150px;
     background-color: #d5d5d5;
@@ -9,8 +9,19 @@
 }
 #header li {
     display: inline-block;
-}
+} */
 
+.loginId__popup {
+    width: 380px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #fff;
+    border-radius: 15px;
+    border: 1px solid #6CC4B3;
+    color: #505050;
+}
 .negative_mb18 {
     margin-bottom: -18px;
 }
@@ -30,7 +41,7 @@
     display: flex;
     justify-content: space-between;
     border-bottom: 1px dashed #6CC4B3;
-    /* margin-bottom: 20px; */
+    margin-bottom: 20px;
 }
 .method {
     width: 72px;
