--- a/project/asset/css/login/joinCompete.css
+++ b/project/asset/css/login/joinCompete.css
@@ -1,4 +1,4 @@
-.join__popup {
+.joinCom__popup {
     margin: 0 auto;
     position: absolute;
     top: 50%;
@@ -6,7 +6,7 @@
     transform: translate(-50%, -50%);
     min-height: 647.2px;
 }
-.join__inner {
+.joinCom__popup .join__inner {
     width: 380px;
     background-color: #fff;
     border-radius: 15px;
@@ -15,16 +15,16 @@
     position: relative;
     border: 1px solid #6CC4B3;
 }
-.join__inner > h2 {
+.joinCom__popup .join__inner > h2 {
     font-size: 24px;
     color: #505050;
     text-align: center;
     border-bottom: 1px dashed #6CC4B3;
     padding-bottom: 29px;
-    margin-bottom: 110px;
+    margin-bottom: 117px;
 }
 .complete_contents {
-    padding-bottom: 111px;
+    padding-bottom: 116.3px;
     border-bottom: 1px dashed #6CC4B3;
     margin-bottom: 30px;
 }
