--- a/javascript/assets/css/music.css
+++ b/javascript/assets/css/music.css
@@ -21,7 +21,7 @@
     font-size: 14px;
 }
 .music__contents {
-    background: #7795ff;
+    background: #535f8a;
     width: 100%;
 }
 .music__view {
@@ -50,6 +50,9 @@
 .music__view .title p {
     font-size: 18px;
 }
+/* input[type="range" i] {
+    color: #000;
+} */
 .music__control {
     width: 100%;
     height: 100px;
@@ -59,7 +62,7 @@
 .music__control .progress {
     width: 100%;
     height: 6px;
-    background: #425497;
+    background: #414d77;
     border-radius: 5px;
 }
 .music__control .progress .bar {
@@ -148,12 +151,16 @@
 }
 
 .music__footer {
-    background: #7795ff;
+    background: #535f8a;
     padding-top: 0px;
 }
 
 .music__list {
     padding: 0px 20px 20px 20px;
+    display: none;
+}
+.music__list.show {
+    display: block;
 }
 .music__list.hide {
     display: none;
@@ -221,7 +228,7 @@
     height: 10px;
 }
 ::-webkit-scrollbar-track {
-    background: #425497;
+    background: #414d77;
     border-radius: 10px;
 }
 ::-webkit-scrollbar-thumb {
