--- a/project01/asset/css/board/boardView.css
+++ b/project01/asset/css/board/boardView.css
@@ -46,3 +46,24 @@
 .view__bot > p {
     margin-bottom: 20px;
 }
+.boardView__btn {
+    margin: 0 auto;
+    width: 1360px;
+    text-align: right;
+    padding-top: 17px;
+    cursor: pointer;
+}
+.boardView__btn > button {
+    background-color: inherit;
+    font-size: 18px;
+    margin-bottom: 20px;
+}
+.boardView__btn > button:last-child {
+    margin-right: 20px;
+}
+.boardView__btn > button a {
+    color: #505050;
+}
+.boardView__btn > button span {
+    padding: 0 0px 0 5px;
+}
