--- a/javascript/assets/css/search.css
+++ b/javascript/assets/css/search.css
@@ -96,6 +96,13 @@ li {
     font-size: 6vw;
     margin-bottom: 10px;
 }
+.search__audio {
+    margin-bottom: 10px;
+    cursor: pointer;
+}
+.search__audio .play {
+    display: none;
+}
 .search__wrap .time {
     width: 140px;
     height: 140px;
@@ -202,6 +209,13 @@ li {
     text-align: right;
     border-bottom: 2px solid var(--htmlColor);
 }
+.search__info2.center {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+    padding-bottom: 30px;
+}
 .search__info .type {
     text-align: center;
     margin-bottom: 10px;
@@ -301,6 +315,7 @@ footer a:hover {
     padding: 10px 20px;
     color: #fff;
     border-radius: 30px;
+    margin: 3px;
 }
 .search__missAnswers {
     border-bottom: 2px dashed var(--htmlColor);
@@ -312,4 +327,66 @@ footer a:hover {
     color: var(--htmlColor);
     padding: 10px 20px;
     border-radius: 30px;
+    margin: 3px;
 }
+.search__result {
+    transform: scale3d(0, 0, 0);
+    position: fixed;
+    right: 3vw;
+    top: 3vw;
+    width: 30vw;
+    height: 30vw;
+    z-index: 10000;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    background-color: #fff;
+    border: 3px solid #946BC6;
+}
+.search__result.show {
+    display: flex;
+    animation: rubberBand 1s 0.6s ease forwards;
+}
+.search__result .result {
+    margin-top: 10px;
+    font-style: 1vw;
+    line-height: 1.4;
+}
+.search__result .restart {
+    background: #946BC6;
+    color: #fff;
+    border: 0;
+    font-size: 16px;
+    padding: 6px 20px;
+    margin-top: 10px;
+    border-radius: 30px;
+    cursor: pointer;
+}
+
+@keyframes rubberBand {
+    from {
+        transform: scale3d(0, 0, 0);
+    }
+    20% {
+        transform: scale3d(1, 1, 1);
+    }
+    30% {
+        transform: scale3d(1.25, 0.75, 1);
+    }
+    40% {
+        transform: scale3d(0.75, 1.25, 1);
+    }
+    50% {
+        transform: scale3d(1.15, 0.85, 1);
+    }
+    65% {
+        transform: scale3d(0.95, 1.05, 1);
+    }
+    75% {
+        transform: scale3d(1.05, 0.95, 1);
+    }
+    to {
+        transform: scale3d(1, 1, 1);
+    }
+  }
