--- a/javascript/assets/css/game.css
+++ b/javascript/assets/css/game.css
@@ -15,7 +15,7 @@ body {
 }
 
 #header {
-    position: fixed;
+    /* position: fixed; */
     width: 100%;
     background: rgba(33, 34, 39, 0.4);
     display: flex;
