--- a/project/asset/css/login/Agree.css
+++ b/project/asset/css/login/Agree.css
@@ -121,7 +121,7 @@ input[id="agreeCheckAll"]:checked + label::after {
 }
 .confirm_btn {
     width: 50%;
-    color: #505050;
+    color: #cecece;
     cursor: pointer;
 }
 .confirm_btn a {
