--- a/project/asset/css/login/join.css
+++ b/project/asset/css/login/join.css
@@ -134,3 +134,52 @@ input:required {
     cursor: pointer;
     color: #505050;
 }
+
+#youNameComment {
+    margin-left: 5px;
+    margin-top: 5px;
+    color: #505050;
+    font-size: 14px;
+}
+#youGenderMaleComment {
+    margin-left: 5px;
+    margin-top: 5px;
+    color: #505050;
+    font-size: 14px;
+}
+#youGenderFemaleComment {
+    margin-left: 5px;
+    margin-top: 5px;
+    color: #505050;
+    font-size: 14px;
+}
+#youIDComment {
+    margin-left: 5px;
+    margin-top: 5px;
+    color: #505050;
+    font-size: 14px;
+}
+#youPassComment {
+    margin-left: 5px;
+    margin-top: 5px;
+    color: #505050;
+    font-size: 14px;
+}
+#youPassCComment {
+    margin-left: 5px;
+    margin-top: 5px;
+    color: #505050;
+    font-size: 14px;
+}
+#youEmailComment {
+    margin-left: 5px;
+    margin-top: 5px;
+    color: #505050;
+    font-size: 14px;
+}
+#youPhoneComment {
+    margin-left: 5px;
+    margin-top: 5px;
+    color: #505050;
+    font-size: 14px;
+}
