--- a/project/asset/css/board/boardComment.css
+++ b/project/asset/css/board/boardComment.css
@@ -1,10 +1,10 @@
 #boardComment {
     margin-top: 30px;
     margin-bottom: 50px;
-    padding-bottom: 50px;
+    padding-bottom: 30px;
     border-bottom: 1px dashed #6cc4b3;
 }
-​#boardComment > h2 {
+#boardComment > h2 {
     color: #6cc4b3;
     font-size: 20px;
     border-bottom: 1px solid #757575;
